--- a/uitwerkingen/01_WebSocket/WebSocket_2.html
+++ b/uitwerkingen/01_WebSocket/WebSocket_2.html
@@ -41,7 +41,7 @@
       }
       function resetConnection()
       {
-        writeToScreen("Disconecting from server");
+        writeToScreen("Disconnecting from server");
         const disconnect_callback = function() {
           writeToScreen("Disconnected");
           connect.disabled = false;
